# esp-worker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  library.json  library.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  release.yml
examples/basic_lambda_worker/: basic_lambda_worker.ino
examples/basic_worker/: basic_worker.ino
examples/psram_stack/: psram_stack.ino
scripts/: generate_release_changelog.py
src/: ESPWorker.h
src/esp_worker/: worker.cpp  worker.h
test/: CMakeLists.txt  esp_worker_lifecycle_tests.cpp  test_support.h  worker_test_stubs.cpp
test/stubs/: Arduino.h  esp_heap_caps.h
test/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
